# thinking

./: .gitignore  README.md
_6_1/: CMakeLists.txt  README.md  main.cpp
dynamic_programming/: CMakeLists.txt  README.md  coins.cpp  cut_steel.cpp  dp_grid.cpp  lcs.cpp  logest_palindrome.cpp  main.cpp  matrix.cpp  optimal_bst.cpp  scan.sh  simple_longest_seq.cpp  test.txt
exercise/: CMakeLists.txt  bit.cpp  heap.cpp  main.cpp  odd.cpp  scan.sh  segment_tree.cpp
greedy_algorithm/: CMakeLists.txt  activity_select.cpp  huffman.cpp  scan.sh
leetcode/: 121_problem_dy.cpp  53_problem_dy.cpp  62_unique_paths.cpp  63_unique_paths_ii.cpp  64_minimum_path_sum.cpp  91_decode_ways.cpp  CMakeLists.txt  main.cpp  scan.sh
template_dir/: CMakeLists.txt  scan.sh
