cmake_minimum_required(VERSION 3.6)
project(leetcode)
set(CMAKE_CXX_STANDARD 14)

add_executable(121_problem_dy ./121_problem_dy.cpp)
add_executable(53_problem_dy ./53_problem_dy.cpp)
add_executable(62_unique_paths ./62_unique_paths.cpp)
add_executable(63_unique_paths_ii ./63_unique_paths_ii.cpp)
add_executable(64_minimum_path_sum ./64_minimum_path_sum.cpp)
add_executable(91_decode_ways ./91_decode_ways.cpp)
add_executable(main ./main.cpp)
